tests/core/snapshots/graphql-conformance-http-005.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user(id: ID!): User!
}

type User {
  dob: String!
  id: ID!
  name: String!
}

schema {
  query: Query
}
