tests/core/snapshots/graphql-conformance-http-006.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user(id: ID!): User!
}

type User {
  friends(first: Int): [User!]!
  id: ID!
  mutualFriends(first: Int): [User!]!
  name: String!
  profilePic(size: Int, width: Int, height: Int): String!
}

schema {
  query: Query
}
