tests/core/snapshots/graphql-conformance-http-007.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "profiles": [
        {
          "handle": "user-1",
          "friends": {
            "count": null
          },
          "likers": null
        },
        {
          "handle": "user-2",
          "friends": null,
          "likers": {
            "count": null
          }
        }
      ]
    }
  }
}
